--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<div style="text-align:center">
-		<img src="/images/cap.jpg" />
+		<img src="/images/cap.jpg" width="1024px" />
 	</div>
 </body>
 </html>
